更改一个问题，sample中新增一个Rx+loading的示例，新增可以影响全局dialog的类和方法

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,5 +42,19 @@
         android:layout_marginTop="20dp"
         android:text="@string/load_failed_without_anim" />
 
+    <Button
+        android:id="@+id/btn6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/rx_dialog" />
+
+    <Button
+        android:id="@+id/btn7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/jump_to_another_activity" />
+
 
 </LinearLayout>
