--- a/app/src/main/res/menu/select.xml
+++ b/app/src/main/res/menu/select.xml
@@ -19,6 +19,7 @@
 
     <item
         android:id="@+id/color"
+        android:visible="false"
         android:title="@string/change_color" />
 
     <item
